Fixes some minor bugs signaled by the "FindBugs" plugins